--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="image/style.css" />
-    <link rel="stylesheet" href="font/elegant.css" />
+    <link rel="stylesheet" href="style/style.css" />
+    <link rel="stylesheet" href="font/font.css" />
     <title>WatchWorld</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -15,8 +15,8 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-sm bg-body-tertiary">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">WatchWorld</a>
+      <div class="container-fluid d-flex">
+        <a class="navbar-brand fs-2" href="#">WatchWorld</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -29,7 +29,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
+          <div class="navbar-nav ms-auto">
             <a class="nav-link active" aria-current="page" href="#">Home</a>
             <a class="nav-link" href="#">Features</a>
             <a class="nav-link" href="#">Pricing</a>
