camnbio de back y colores

--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
     />
   </head>
   <body>
-    <nav class="navbar navbar-expand-sm bg-body-tertiary">
+    <div class="back-img">
+        <img src="image/clock1.jpg" alt="reloj" class="w-100 vh-1000">
+    <nav class="navbar navbar-expand-sm fixed-top">
+        
       <div class="container-fluid d-flex">
         <a class="navbar-brand fs-2" href="#">WatchWorld</a>
         <button
@@ -29,15 +32,26 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav ms-auto">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-            <a class="nav-link" href="#">Features</a>
-            <a class="nav-link" href="#">Pricing</a>
-            <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+          <div class="navbar-nav ms-auto fs-5">
+            <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+            <a class="nav-link" href="#">Productos</a>
+            <a class="nav-link" href="#">Nosotros</a>
+            <a class="nav-link" href="#">Contacto</a>
           </div>
         </div>
+        
       </div>
     </nav>
+ </div> 
+</div>
+<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsa libero dolorem assumenda temporibus fugit, incidunt tempore officiis voluptate laboriosam totam. Reiciendis, facilis? Reiciendis expedita ipsum atque, voluptas soluta magni numquam?
+Illo aliquam voluptate earum voluptates cupiditate dolore, aspernatur harum cumque sequi ex voluptas in commodi sed pariatur exercitationem nesciunt adipisci tenetur accusamus magnam repudiandae amet laudantium eaque dolorum quas! Sed?
+Accusantium, odio libero. Quasi reprehenderit sapiente inventore. Illo placeat nesciunt non assumenda quam dolores earum. Accusamus magni, praesentium in dolore libero eos veritatis delectus harum fuga, fugit est distinctio vel!
+Est alias necessitatibus totam iusto facere id ducimus officiis iste? Blanditiis doloribus aspernatur unde reiciendis voluptatem! Soluta nemo at, voluptates ex culpa dolor officia aliquam in, cumque qui ipsa non!
+Nisi sunt voluptatibus voluptas repellat fuga perspiciatis saepe illo nihil? Non fuga, quibusdam a velit obcaecati eligendi recusandae nostrum distinctio, illum mollitia exercitationem sapiente corporis neque corrupti officia facere necessitatibus?
+Harum velit cumque error cupiditate ipsum eius! Magnam dolorum magni, nam modi architecto laboriosam! Fugit, quia natus veniam quam sint soluta, cupiditate ullam itaque molestias sed veritatis beatae dignissimos enim!
+Obcaecati fugiat ut temporibus nostrum perspiciatis sed vitae dolores beatae? Eum, eos! Quasi vero at ad obcaecati perspiciatis consequuntur nostrum, rerum laboriosam tempore esse! Molestias impedit animi modi tenetur perspiciatis.
+Odit, voluptas. Eligendi nihil totam in. Aperiam nobis, repellendus obcaecati aspernatur sed eum quisquam, molestias at exercitationem temporibus ex iste dolore quaerat earum quas laborum laboriosam neque perspiciatis est nihil.</p>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
