texto-central-prueba

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
   <body>
     <div class="back-img">
         <img src="image/clock1.jpg " alt="reloj" class="w-100 vh-100">
-        <div class="position-absolute top-50 start-50 translate-middle-y text-wrap">
-          <h1 class="text-center">Titulo</h1>
-          <p class="text-parra">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis ratione facere modi corrupti illo! Illo nam qui blanditiis fugiat inventore adipisci ex nobis. Vel esse velit eligendi repudiandae veniam numquam!</p>
+        <div class="text">
+          <h1 >Titulo</h1>
+          <p >Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis ratione facere modi corrupti illo! Illo nam qui blanditiis fugiat inventore adipisci ex nobis. Vel esse velit eligendi repudiandae veniam numquam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, aspernatur debitis nulla ullam autem non reiciendis sed esse, officiis error sapiente nisi ea cupiditate dolorum optio voluptas et minima nostrum.</p>
         </div>
   
     <nav class="navbar navbar-expand-sm fixed-top">
