--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style/style.css" />
     <link rel="stylesheet" href="font/font.css" />
+    <link rel="stylesheet" href="font/montserrat.css">
     <title>WatchWorld</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -17,8 +18,7 @@
     <div class="back-img">
         <img src="image/clock1.jpg " alt="reloj" class="image w-100 vh-100">
         <div class="text">
-          <h1 >Titulo</h1>
-          <p >Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis ratione facere modi corrupti illo! Illo nam qui blanditiis fugiat inventore adipisci ex nobis. Vel esse velit eligendi repudiandae veniam numquam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, aspernatur debitis nulla ullam autem non reiciendis sed esse, officiis error sapiente nisi ea cupiditate dolorum optio voluptas et minima nostrum.</p>
+          <h1 >Titulo</h1><p>Descubre la belleza en cada segundo con nuestra selección exclusiva de relojes. Cada pieza combina artesanía intemporal y diseño moderno, ofreciéndote el complemento perfecto para cualquier ocasión. Explora nuestra colección y encuentra el reloj que refleja tu estilo y personalidad. En Tiempo Elegante, cada tic-tac celebra la vida.</p>
         </div>
   
     <nav class="navbar navbar-expand-sm fixed-top">
